--- a/SmartGel/Base.lproj/LaunchScreen.storyboard
+++ b/SmartGel/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,17 +23,96 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SmartGel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmh-f6-3zt">
-                                <rect key="frame" x="126" y="317" width="125" height="33.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TM SMART GEL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmh-f6-3zt">
+                                <rect key="frame" x="85.5" y="288.5" width="204" height="33.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pJH-b5-hNN">
+                                <rect key="frame" x="30" y="332" width="315" height="3"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sa0-mo-ttn">
+                                        <rect key="frame" x="0.0" y="0.0" width="104" height="3"/>
+                                        <color key="backgroundColor" red="0.9882352941176471" green="0.68627450980392157" blue="0.090196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhk-xl-ecj">
+                                        <rect key="frame" x="104" y="0.0" width="104" height="3"/>
+                                        <color key="backgroundColor" red="0.27843137254901962" green="0.3411764705882353" blue="0.23529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.75294117647058822" green="0.2627450980392157" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="mhk-xl-ecj" firstAttribute="leading" secondItem="sa0-mo-ttn" secondAttribute="trailing" id="18P-Jw-rwq"/>
+                                    <constraint firstItem="mhk-xl-ecj" firstAttribute="height" secondItem="sa0-mo-ttn" secondAttribute="height" id="5BI-nC-ZlE"/>
+                                    <constraint firstItem="sa0-mo-ttn" firstAttribute="width" secondItem="pJH-b5-hNN" secondAttribute="width" multiplier="0.33" id="6ZF-0x-vCy"/>
+                                    <constraint firstItem="sa0-mo-ttn" firstAttribute="top" secondItem="pJH-b5-hNN" secondAttribute="top" id="ICM-yg-Fn3"/>
+                                    <constraint firstItem="sa0-mo-ttn" firstAttribute="height" secondItem="pJH-b5-hNN" secondAttribute="height" id="Ycu-KT-3q1"/>
+                                    <constraint firstItem="mhk-xl-ecj" firstAttribute="top" secondItem="pJH-b5-hNN" secondAttribute="top" id="dO1-41-E5b"/>
+                                    <constraint firstAttribute="height" constant="3" id="dzA-Oe-R5m"/>
+                                    <constraint firstItem="sa0-mo-ttn" firstAttribute="leading" secondItem="pJH-b5-hNN" secondAttribute="leading" id="grk-g5-ovg"/>
+                                    <constraint firstItem="mhk-xl-ecj" firstAttribute="width" secondItem="sa0-mo-ttn" secondAttribute="width" id="tCt-n2-yqc"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PERSULPHATE TECHNOLOGIES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWr-kW-43G">
+                                <rect key="frame" x="177.5" y="621.5" width="167.5" height="13.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ur1-ix-9qa">
+                                <rect key="frame" x="135" y="623" width="34" height="10"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s0E-BF-nW1">
+                                        <rect key="frame" x="0.0" y="0.0" width="10" height="10"/>
+                                        <color key="backgroundColor" red="0.98823529409999999" green="0.68627450980000004" blue="0.090196078430000007" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="10" id="76e-Cg-Hvr"/>
+                                            <constraint firstAttribute="width" constant="10" id="y3f-du-gV1"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dRo-45-bFS">
+                                        <rect key="frame" x="11.5" y="0.0" width="10" height="10"/>
+                                        <color key="backgroundColor" red="0.27843137254901962" green="0.3411764705882353" blue="0.23529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="10" id="ET7-Gl-KXa"/>
+                                            <constraint firstAttribute="width" constant="10" id="VX4-TN-z68"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MjW-nJ-ndd">
+                                        <rect key="frame" x="24" y="0.0" width="10" height="10"/>
+                                        <color key="backgroundColor" red="0.75294117650000003" green="0.26274509800000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="10" id="LVa-hm-qRv"/>
+                                            <constraint firstAttribute="height" constant="10" id="q43-SB-qHG"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="s0E-BF-nW1" secondAttribute="bottom" id="18R-lN-58A"/>
+                                    <constraint firstAttribute="trailing" secondItem="MjW-nJ-ndd" secondAttribute="trailing" id="3Il-Gx-KUl"/>
+                                    <constraint firstAttribute="width" constant="34" id="GXA-kO-fsN"/>
+                                    <constraint firstAttribute="height" constant="10" id="aF6-oU-GdM"/>
+                                    <constraint firstAttribute="bottom" secondItem="MjW-nJ-ndd" secondAttribute="bottom" id="jPP-Ti-jHT"/>
+                                    <constraint firstItem="s0E-BF-nW1" firstAttribute="leading" secondItem="Ur1-ix-9qa" secondAttribute="leading" id="vtv-Mx-p3b"/>
+                                    <constraint firstItem="dRo-45-bFS" firstAttribute="centerX" secondItem="Ur1-ix-9qa" secondAttribute="centerX" id="wrp-O3-6BT"/>
+                                    <constraint firstItem="dRo-45-bFS" firstAttribute="centerY" secondItem="Ur1-ix-9qa" secondAttribute="centerY" id="yy3-nc-Yf9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.14901960780000001" green="0.1764705882" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Nmh-f6-3zt" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="RiR-qn-Grh"/>
-                            <constraint firstItem="Nmh-f6-3zt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="z7z-AQ-wG6"/>
+                            <constraint firstItem="pJH-b5-hNN" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0Tl-4Z-LD4"/>
+                            <constraint firstItem="Nmh-f6-3zt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1J6-nX-KxA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pJH-b5-hNN" secondAttribute="trailing" constant="14" id="GPj-yI-14k"/>
+                            <constraint firstItem="eWr-kW-43G" firstAttribute="leading" secondItem="Ur1-ix-9qa" secondAttribute="trailing" constant="8.5" id="PNA-Zc-8Kt"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="eWr-kW-43G" secondAttribute="bottom" constant="32" id="WVa-UI-jnt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eWr-kW-43G" secondAttribute="trailing" constant="14" id="XZ5-wU-G4D"/>
+                            <constraint firstItem="pJH-b5-hNN" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="14" id="aTR-cp-g87"/>
+                            <constraint firstItem="pJH-b5-hNN" firstAttribute="top" secondItem="Nmh-f6-3zt" secondAttribute="bottom" constant="10" id="hK3-vt-lLL"/>
+                            <constraint firstItem="pJH-b5-hNN" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="sCZ-xC-9f2"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Ur1-ix-9qa" secondAttribute="bottom" constant="34" id="vCO-el-SlU"/>
                         </constraints>
                     </view>
                 </viewController>
